@@ -36,6 +36,7 @@
     * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
     * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page
     * 3981 FIX: Views: Fixed context button displaying depending on usage
+    * 4071 FIX: Removed notes_url from "LOG *" logwatch services...
 
     WATO:
     * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
